# SETR

./: .gitignore  Doxyfile  Makefile  a.out  main.c  makefile  test
LAB_12_13_14/: CMakeLists.txt  Doxyfile  prj.conf
LAB_12_13_14/doc/html/: ADC_8c.html  ADC_8c__incl.map  ADC_8h.html  ADC_8h.js  ADC_8h__dep__incl.map  ADC_8h__dep__incl.md5  ADC_8h__incl.map  ADC_8h__incl.md5  ADC_8h_source.html  PI__controller_8c.html  PI__controller_8c.js  PI__controller_8c__incl.map  PI__controller_8c__incl.md5  PI__controller_8h.html  PI__controller_8h.js  PI__controller_8h__dep__incl.map  PI__controller_8h__dep__incl.md5  PI__controller_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_000000_000001.html  dir_000000_000002.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_c035f949c054a65368066a9aa2897862.html  dir_c035f949c054a65368066a9aa2897862.js  dir_c5be3cb104bc0711c4c7faefc000f3de.html  dir_c5be3cb104bc0711c4c7faefc000f3de.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  (+16 more)
LAB_12_13_14/doc/latex/: ADC_8c.tex  ADC_8h__dep__incl.md5  PI__controller_8c.tex  PI__controller_8c__incl.md5  PI__controller_8h.tex  PI__controller_8h__dep__incl.md5  annotated.tex  files.tex  main_8c.tex  main_8c__incl.md5  refman.tex  structCalendar.tex  structPI.tex  structbuffer.tex  structmemory.tex
LAB_12_13_14/src/: main.c
(+516 files in other folders)
